diesel-builders/tests/ui/pk_default_error.stderr
error: Primary key cannot have a default value
 --> tests/ui/pk_default_error.rs:6:5
  |
6 | /     #[table_model(default = 1)]
7 | |     pub id: i32,
  | |_______________^
